--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -67,7 +67,7 @@
   <div class="my-2">
     <button id="show-cmt-btn" class="btn btn-primary" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-      댓글 보기 [<span id="comment-count" th:text="${post.comments.size()}"></span>]
+      댓글 보기 [<span id="comment-count">0</span>]
     </button>
   </div>
   <div class="collapse" id="collapseExample">
@@ -86,16 +86,7 @@
          style="border-radius: 24px; box-shadow: 0px 0px 10px 0px rgb(230, 230, 230);">
       <div class="card-body py-1 my-1">
         <div id="comment-box">
-          <th:block th:if="${post.comments.size() == 0}" class="text-light text-center display-6">
-            <div class="row fw-semibold text-center"
-                 style="font-size: 20px;">
-              <div class="col my-3">
-                <p style="font-size: 50px">🔎</p>
-                <div class="display-6">현재 등록된 댓글이 없습니다.</div>
-                <span class="fs-5">첫 댓글을 작성해주세요!</span>
-              </div>
-            </div>
-          </th:block>
+
         </div>
       </div>
     </div>
