feat/spring security

--- a/src/main/resources/templates/layout/fragment.html
+++ b/src/main/resources/templates/layout/fragment.html
@@ -15,6 +15,9 @@
       <a class="nav-link active mx-3" aria-current="page" th:href="@{/}">Home</a>
       <a class="nav-link  mx-3" th:href="@{/post/list}">글 리스트</a>
       <a class="nav-link mx-3" th:href="@{/post/create}">새 글 작성</a>
+      <a class="nav-link mx-3" th:href="@{/login}">로그인</a>
+      <a class="nav-link mx-3" th:href="@{/signup}">회원가입</a>
+      <a class="nav-link mx-3" th:href="@{/logout}">나가기</a>
     </div>
     <form role="search" method="get" th:action="@{/post/search}">
       <div class="row">
