--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -9,9 +9,9 @@
         crossorigin="anonymous">
 
 </head>
-<body class="container text-center">
+<body class="container-fluid">
 
-<div th:insert="~{layout/fragment::header}"></div>
+<div th:insert="~{layout/fragment::header('포스팅 리스트')}"></div>
 <div th:insert="~{layout/fragment::navigation}"></div>
 
 <main class="text-center">
