--- a/src/main/resources/templates/post/modify.html
+++ b/src/main/resources/templates/post/modify.html
@@ -9,8 +9,8 @@
         crossorigin="anonymous">
   <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css"/>
 </head>
-<body class="container">
-<div th:insert="~{layout/fragment::header}"></div>
+<body class="container-fluid">
+<div th:insert="~{layout/fragment::header('포스팅 수정하기')}"></div>
 <div th:insert="~{layout/fragment::navigation}"></div>
 
 <main>
