--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6" th:fragment="htmlComp"/>
 <head>
   <meta charset="UTF-8">
   <title>WoorukLog</title>
@@ -9,9 +11,9 @@
         crossorigin="anonymous">
 
 </head>
-<body class="container text-center">
+<body class="container-fluid">
 
-<div th:insert="~{layout/fragment::header}"></div>
+<div th:insert="~{layout/fragment::header('WoorukLog')}"></div>
 <div th:insert="~{layout/fragment::navigation}"></div>
 
 
