--- a/src/main/resources/templates/layout/fragment.html
+++ b/src/main/resources/templates/layout/fragment.html
@@ -1,9 +1,9 @@
-<header class="card text-center" style="height: 200px" th:fragment="header">
+<header class="card text-center bg-dark" style="height: 200px" th:fragment="header(title)">
   <div class="card-body container d-flex justify-content-center">
     <h1 class="card-title fs-1 align-self-center">
-      <a class="link-offset-2 link-underline link-underline-opacity-0" th:href="@{/}">
-        WoorukLog
-      </a>
+      <a class="link-offset-2 link-underline link-underline-opacity-0" th:href="@{/}"
+        th:text="${title}"
+      ></a>
     </h1>
   </div>
 </header>
@@ -15,15 +15,23 @@
       <a class="nav-link active mx-3" aria-current="page" th:href="@{/}">Home</a>
       <a class="nav-link  mx-3" th:href="@{/post/list}">글 리스트</a>
       <a class="nav-link mx-3" th:href="@{/post/create}">새 글 작성</a>
-      <a class="nav-link mx-3" th:href="@{/login}">로그인</a>
-      <a class="nav-link mx-3" th:href="@{/signup}">회원가입</a>
-      <a class="nav-link mx-3" th:href="@{/logout}">나가기</a>
+      <th:block sec:authorize="isAnonymous()">
+        <a class="nav-link mx-3" th:href="@{/member/login}">로그인</a>
+        <a class="nav-link mx-3" th:href="@{/member/signup}">회원가입</a>
+      </th:block>
+      <th:block sec:authorize="isAuthenticated()">
+        <a class="nav-link mx-3" th:href="@{/logout}">
+          <span class="text-secondary" sec:authentication="name"></span>
+          나가기
+        </a>
+      </th:block>
     </div>
     <form role="search" method="get" th:action="@{/post/search}">
       <div class="row">
         <div class="col-6 input-group">
           <label for="searchInput" class="mx-4 mt-2">전체 검색</label>
-          <input id="searchInput" name="keyword" class="form-control me-2" type="search" placeholder="Search"
+          <input id="searchInput" name="keyword" class="form-control me-2" type="search"
+                 placeholder="Search"
                  aria-label="Search">
           <button class="btn btn-outline-success form-control" type="submit">Search</button>
         </div>
@@ -32,6 +40,17 @@
   </div>
 </nav>
 
-<script th:fragment="bootstrap_js" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+<script th:fragment="bootstrap_js"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
+
+<head th:fragment="my-header">
+  <meta charset="UTF-8">
+  <title>로그인 페이지</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+        crossorigin="anonymous">
+
+</head>
