--- a/src/main/resources/templates/post/create.html
+++ b/src/main/resources/templates/post/create.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"/>
 <head>
   <meta charset="UTF-8">
-  <title>woorukLog-새글 작성</title>
+  <title>woorukLog - 새글 작성</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
@@ -10,8 +11,8 @@
 
   <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css"/>
 </head>
-<body class="container">
-<div th:insert="~{layout/fragment::header}"></div>
+<body class="container-fluid">
+<div th:insert="~{layout/fragment::header('새글 작성')}"></div>
 <div th:insert="~{layout/fragment::navigation}"></div>
 
 <main>
@@ -29,7 +30,7 @@
   </div>
   <div class="mb-3">
     <label for="authorInput" class="form-label">작성자</label>
-    <input class="form-control" name="author" id="authorInput"/>
+    <input class="form-control" name="author_id" id="authorInput" th:value="${#authentication.name}" readonly/>
   </div>
   <div>
     <button id="saveBtn" class="form-control">완료</button>
