--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>게시글 상세 페이지</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
@@ -18,9 +18,9 @@
     }
   </style>
 </head>
-<body class="container">
+<body class="container-fluid">
 
-<div th:insert="~{layout/fragment::header}"></div>
+<div th:insert="~{layout/fragment::header('글 상세보기')}"></div>
 <div th:insert="~{layout/fragment::navigation}"></div>
 
 <main>
@@ -55,7 +55,7 @@
       </li>
     </ul>
   </div>
-  <div>
+  <div th:if="${#authentication.getName() == post.author}">
     <a class="btn btn-warning form-control mt-4" th:href="@{/post/modify/} + ${post.id}">수정하기
     </a>
     <a class="btn btn-dark form-control" th:href="@{/post/delete/} + ${post.id}">삭제하기</a>
@@ -71,9 +71,10 @@
     </button>
   </div>
   <div class="collapse" id="collapseExample">
-    <div mt-3> <!--   댓글 쓰기   -->
+    <div class="mt-3"> <!--   댓글 쓰기   -->
       <textarea id="cmtText" placeholder="댓글을 작성하세요" class="form-control"
                 style="height: auto;" rows=1 ></textarea>
+      <input type="hidden" th:value="${#authentication.getName()}" id="curUser"/>
       <div class="mb-3" style="display: flex; justify-content: flex-end">
         <div class="d-flex " style="flex-direction: column">
           <div class="mb-3 d-flex justify-content-end"><span id="cmtText-length">0</span>/1000 자</div>
