--- a/src/main/resources/templates/post/search.html
+++ b/src/main/resources/templates/post/search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6" th:fragment="htmlComp"/>
 <head>
   <meta charset="UTF-8">
   <title>PostList</title>
@@ -9,9 +10,9 @@
         crossorigin="anonymous">
 
 </head>
-<body class="container text-center">
+<body class="container-fluid">
 
-<div th:insert="~{layout/fragment::header}"></div>
+<div th:insert="~{layout/fragment::header('검색 결과보기')}"></div>
 <div th:insert="~{layout/fragment::navigation}"></div>
 
 <main class="text-center">
